--- a/websites/marscollective.co/src/styles/tailwind.css
+++ b/websites/marscollective.co/src/styles/tailwind.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    @apply bg;
+  }
+  body {
+    @apply text-base leading-none text overflow-x-hidden;
+  }
+  img {
+    @apply max-w-full;
+  }
+}
+
 @layer components {
   .container {
     @apply max-w-7xl my-32;
